# PersonalQuery

./: .gitattributes  .gitignore  benchmark.md  pyproject.toml
.github/workflows/: build.yml
src/electron/: electron-builder.config.cjs  package-lock.json  package.json  tsconfig.json
src/electron/electron/ipc/: IpcHandler.ts
src/electron/electron/main/: index.ts
src/electron/electron/main/entities/: SessionEntity.ts  Settings.ts  WindowActivityEntity.ts  WorkDayEntity.ts
src/electron/electron/main/services/: AppUpdaterService.ts  DatabaseService.ts  SessionService.ts  WindowService.ts  WorkScheduleService.ts
src/electron/electron/main/services/trackers/: DaysParticipatedTracker.ts  ExperienceSamplingTracker.ts  TrackerService.ts  WindowActivityTrackerService.ts  example_intent_1.md  example_question_1.md  p1.yaml  p2.yaml  todo.md
src/electron/scripts/: notarize.cjs
src/electron/shared/: study.config.ts
src/electron/shared/dto/: SessionDto.ts  WindowActivityDto.ts  WorkHoursDto.ts
src/electron/src/components/: ChatSideBar.vue  DataExportExperienceSamplingTracker.vue  Schedule.vue  StudyInfo.vue  Switch.vue  WorkHoursRow.vue  hoursList.ts
src/electron/src/router/: index.ts
src/electron/src/styles/: index.less
src/electron/src/utils/: Commands.ts  WebSocketHandler.ts
src/electron/src/views/: Chat.vue  ChatView.vue  DataExportView.vue  OnboardingView.vue  SettingsView.vue
src/electron/src/views/settings/: AboutView.vue  WorkHoursView.vue
src/py-backend/: README.md  main.py  personalquery-backend.spec  pyproject.toml  requirements.txt  schemas.py
src/py-backend/chains/: activity_chain.py
src/py-backend/db/: database.py
src/py-backend/prompts/: query_prompt_old.py  table_prompt.py
src/py-backend/src/: chat_engine.py  chat_store.py  database.py  db_modification.py  llm_registry.py  main.py  schemas.py  server_rest.py  server_ws.py
src/py-backend/src/chains/: activity_chain.py  answer_chain.py  classify_question.py  context_chain.py  init_chain.py  query_chain.py  table_chain.py
src/py-backend/src/helper/: chat_utils.py  copy_db.py  db_modification.py  env_loader.py  result_utils.py  table_info.py  ws_utils.py
src/py-backend/src/prompts/: query_prompt.py  query_prompt_old.py  table_prompt.py
src/py-backend/src/vectorstore/vectorstore/: create_vectorstore.py  embedding.py  search_vectorstore.py
src/py-backend/src/vectorstore/vectorstore/activities_index/: index.pkl
src/py-backend/vectorstore/vectorstore/activities_index/: index.faiss
src/py-backend/vectorstore/vectorstore/process_names_index/: index.faiss  index.pkl
