[project]
name = "personalquery"
version = "0.1.0"
description = ""
authors = [
    {name = "Kavishan Srirangarasa",email = "kavishanwin8@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "schemas (>=0.7.1,<0.8.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
