[project]
name = "personalquery-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kavishan Srirangarasa",email = "kavishanwin8@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain-openai (>=0.3.10,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.0.1"

[tool.poetry]
package-mode = false


