[project]
name = "personalquery-backend"
version = "0.1.0"
description = "LLM-powered backend for the PersonalQuery Electron app"
authors = [
    {name = "Kavishan Srirangarasa",email = "kavishanwin8@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langgraph (>=0.3.20,<0.4.0)",
    "langchain-openai (>=0.3.10,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "langgraph-checkpoint-sqlite (>=2.0.6,<3.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.0.1"
uvicorn = "^0.34.2"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
backend = "uvicorn server_rest:app --reload --port 8000"



